--- a/www/nueva_inspeccion.html
+++ b/www/nueva_inspeccion.html
@@ -104,6 +104,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript">
