--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -81,6 +81,7 @@
     <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>
     <script type="text/javascript" src="js/inspections.js"></script>
+    <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript">document.addEventListener("deviceready", getInspectionsList, false);</script>
     <script type="text/javascript" src="js/push.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
