--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -21,8 +21,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a  onclick="push('Asesor')" class="navbar-link navbar-toggle"><i class="fa fa-paper-plane text-md"> </i></a>
-		  <a id="guardar" href="#" onclick="guardar()" class="navbar-link navbar-toggle"><i class="fa fa-save text-md"> </i></a>
+          <a  onclick="guardar('Asesor')" class="navbar-link navbar-toggle"><i class="fa fa-paper-plane text-md"> </i></a>
+		  <a id="guardar" href="#" onclick="guardar(0)" class="navbar-link navbar-toggle"><i class="fa fa-save text-md"> </i></a>
 		  <div id="buttonmenu" name="buttonmenu"></div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
