--- a/www/index.html
+++ b/www/index.html
@@ -25,19 +25,19 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-user"> </i></span>
-                                <input value="" type="email" id="email" class="form-control" placeholder="Usuario">
+                                <input value="admin@taller-lopez.com" type="email" id="email" class="form-control" placeholder="Usuario">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-lock"> </i></span>
-                                <input value="" type="password" id="password" class="form-control" placeholder="Contraseña">
+                                <input value="12345678" type="password" id="password" class="form-control" placeholder="Contraseña">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-key"> </i></span>
-                                <input value="" type="token" id="token" class="form-control" placeholder="Token">
+                                <input value="kmxtb" type="token" id="token" class="form-control" placeholder="Token">
                             </div>
                         </div>
                         <button type="submit" class="pull-right btn btn-primary mt-4" ><i class="fa fa-sign-in"> </i> Ingresar</button>
