--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -30,7 +30,7 @@
                 <a id="search" class="input-group-addon btn btn-search link">
                   <i class="fa fa-search text-color-marca"> </i>
                 </a>
-                <a data-permissions="true"  onclick="location.href='nueva_inspeccion.html';" class="permission_technical_group permission_add_inspections btn btn-primary pull-right"><i class="fa fa-plus"> </i> Agregar</a>
+                <a data-permissions="true"  onclick="location.href='nueva_inspeccion.html';" class="permission_technical_group permission_add_inspections fullaccess btn btn-primary pull-right"><i class="fa fa-plus"> </i> Agregar</a>
               </div>
             </div>
             <div id="alertaLogin" class="text-center text-red"></div>
@@ -43,8 +43,8 @@
                     <th data-permissions="true" class="permission_see_clients text-left">Marca</th>
                     <th class="text-left">Modelo</th>
                     <th class="text-left">Placas</th>
-                    <th  data-permissions="true" class="permission_see_inspections permission_advisory_group text-left">Estatus</th>
-                    <th data-permissions="true" class="permission_edit_inspections text-center">Modificar</th>
+                    <th  data-permissions="true" class="permission_see_inspections permission_advisory_group text-left ">Estatus</th>
+                    <th data-permissions="true" class="permission_edit_inspections text-center fullaccess">Modificar</th>
                   </tr>
                 </thead>
                 <tbody id='table-body'>
@@ -58,13 +58,15 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
-    <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="js/commun.js"></script>
+          <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/inspections.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
-      document.addEventListener("deviceready", getInspectionsList, false);
+      document.addEventListener("deviceready", function(){
+          getInspectionsList(take = 1, skip = -1);
+      }, false);
      </script>
   </body>
 </html>
