--- a/www/navbar.html
+++ b/www/navbar.html
@@ -60,3 +60,5 @@
     </div>
   </div>
 </nav>
+<div id="readonly-alert" style="z-index: 100010; position: absolute; width: 100%;" class="text-center alert alert-danger hide "><b>Readonly Access</b> Su cuenta ha expirado, activar licencia full access <a href="#">aqui</a> </div>
+<div id="online-status" style="z-index: 100010; position: absolute; width: 100%;margin-top:50px" class="text-center alert alert-warning hide"><b>Offline Access</b> Revise su conexion de red, funcionalidad limitada</div>
