--- a/www/alta_vehiculo.html
+++ b/www/alta_vehiculo.html
@@ -16,7 +16,10 @@
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img name="logo" id='logo' src="" width="70px"></h1>
+          <h1>
+    <img name="logo" id='logo' src="" width="70px">
+    <small id="user_name" class="pull-right text-center"><i class="fa fa-user"></i><br></small>
+</h1>
         </div>
       </div>
       <div class="row">
@@ -75,7 +78,6 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/commun.js"></script>
-    <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/inspections.js"></script>
     <script type="text/javascript" src="js/vehiculos.js"></script>
     <script type="text/javascript" src="js/clientes.js"></script>
