--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -17,9 +17,16 @@
     <div id="navbar"></div>
     <div class="container-fluid my-container">
       <div class="row">
-        <div class="col-xs-1">
-          <h1><img name="logo" id='logo' src="" width="70px"></h1>
+        <div class="col-xs-12">
+            <h4>
+                <img name="logo" id='logo' src="" width="70px">
+                <span class="pull-right  text-muted text-center">
+                    <i class="fa fa-user-circle"></i><br>
+                    <small class="capitalize" id="user_name"></small>
+                </span>
+            </h4>
         </div>
+
       </div>
       <div id="dashboard" class="row">
         <div class="col-xs-12">
@@ -43,8 +50,8 @@
                     <th data-permissions="true" class="permission_advisory_group text-left permission_technical_group">Marca</th>
                     <th class="text-left">Modelo</th>
                     <th class="text-left">Placas</th>
-                    <th  data-permissions="true" class=" permission_advisory_group permission_technical_group">Estatus</th>
-                    <th data-permissions="true" class="permission_technical_group   text-center fullaccess">Modificar</th>
+                    <th >Estatus</th>
+                    <th class="text-center fullaccess">Modificar</th>
                   </tr>
                 </thead>
                 <tbody id='table-body'>
@@ -54,8 +61,8 @@
                 	  <td data-field='brand' data-permissions="true" class="fill-data permission_technical_group permission_advisory_group"></td>
                 	  <td data-field='model' class="fill-data "></td>
                 	  <td data-field='license_plate' class="fill-data "></td>
-                	  <td data-field='status' data-permissions="true" class="fill-data permission_advisory_group permission_technical_group"> </td>
-                	  <td data-field='link'  data-permissions="true" class="fill-data permission_technical_group  text-center  fullaccess"></td>
+                	  <td data-field='status' class="fill-data "> </td>
+                	  <td data-field='link'  class="fill-data  text-center  fullaccess"></td>
                 	</tr>
                 </tbody>
                 <tfoot>
@@ -73,7 +80,6 @@
     <script type="text/javascript" src="js/commun.js"></script>
     <script type="text/javascript" src="js/sync.js"></script>
     <script type="text/javascript" src="js/push.js"></script>
-    <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
 
     <script type="text/javascript" src="cordova.js"></script>
