--- a/www/tecnicos.html
+++ b/www/tecnicos.html
@@ -15,8 +15,14 @@
     <div id="navbar"></div>
     <div class="container-fluid my-container">
       <div class="row">
-        <div class="col-xs-1">
-          <h1><img name="logo" id='logo' src="" width="70px"></h1>
+        <div class="col-xs-12">
+            <h4>
+                <img name="logo" id='logo' src="" width="70px">
+                <span class="pull-right  text-muted text-center">
+                    <i class="fa fa-user-circle"></i><br>
+                    <small class="capitalize" id="user_name"></small>
+                </span>
+            </h4>
         </div>
       </div>
       <div class="row">
