--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -5,9 +5,12 @@
       <link rel="stylesheet" href="css/bootstrap.css" />
       <link rel="stylesheet" href="css/main.css" />
       <link rel="stylesheet" href="css/font-awesome.css" />
+      <link type="image/x-icon" href="/img/logo.ico" rel="icon" />
+      <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon" />
       <title>Login</title>
     </head>
-    <body>
+    <body style="background:#012d4a">
+      <div id="loading"><div id="loader"></div></div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 text-left mt-4">
@@ -17,24 +20,24 @@
             <div class="row">
                 <div class="col-xs-12 text-left mt-4" id="form-login">
                     <form class="vertical-center" onsubmit="return ingresar()">
-                        <h2 class="text-center text-shadow text-white">Acceso</h2>
+                        <h2 class="text-center text-shadow text-white">Acceso Taller</h2>
                         <div id="alertaLogin" class="text-center text-red"></div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-user"> </i></span>
-                                <input value="" type="email" id="email" class="form-control" placeholder="Usuario">
+                                <input value="asesor@speedee.com" type="email" id="email" class="form-control" placeholder="Usuario">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-lock"> </i></span>
-                                <input value="" type="password" id="password" class="form-control" placeholder="Contraseña">
+                                <input value="password" type="password" id="password" class="form-control" placeholder="Contraseña">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-key"> </i></span>
-                                <input type="token" id="token" class="form-control" placeholder="Token">
+                                <input value="6yigp" type="token" id="token" class="form-control" placeholder="Token">
                             </div>
                         </div>
                         <button type="submit" class="pull-right btn btn-primary mt-4" ><i class="fa fa-sign-in"> </i> Ingresar</button>
@@ -44,16 +47,20 @@
 
             <div class="row">
                 <div class="col-xs-12 text-center mt-5">
-                    <a onclick="resetPassword();" class="text-white">¿Olvidaste tu contraseña?</a>
+                    <a onclick="resetPassword();" class="text-white">¿Olvidó su contraseña?</a>
                 </div>
             </div>
         </div>
     </body>
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/auth.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
-      localStorage.clear();
+      document.addEventListener("deviceready",function(){
+          localStorage.clear();
+          $('#loading').fadeOut();
+      });
     </script>
 </html>
