--- a/platforms/browser/www/tecnicos.html
+++ b/platforms/browser/www/tecnicos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/font-awesome.css" />
     <link type="image/x-icon" href="/img/logo.ico" rel="icon" />
     <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon" />
-    <title>Cliente</title>
+    <title>Asignar técnico</title>
   </head>
   <body>
     <div id="loading"><div id="loader"></div></div>
@@ -16,10 +16,13 @@
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-12">
-          <h1>
-    <img name="logo" id='logo' src="" width="70px">
-    <small id="user_name" class="pull-right text-center"><i class="fa fa-user"></i><br></small>
-</h1>
+            <h4>
+                <img name="logo" id='logo' src="" width="70px">
+                <span class="pull-right  text-muted text-center">
+                    <i class="fa fa-user-circle"></i><br>
+                    <small class="capitalize" id="user_name"></small>
+                </span>
+            </h4>
         </div>
       </div>
       <div class="row">
@@ -38,14 +41,21 @@
               <table class="table table-striped default-table">
                 <thead class="margin-0">
                     <tr>
-                        <th width="80%">Nombre</th>
-                        <th class="text-center fullaccess">Eliminar</th>
-                        <th class="text-center">Visualizar</th>
+                        <th width="80%">Técnico</th>
+                        <th class="text-center">Asignar</th>
                     </tr>
                 </thead>
-                <tbody id="table-clients-users"></tbody>
+                <tbody id="tecnicos">
+                    <tr id="clone" class="hide">
+                        <td class="fill-data" data-field="name"></td>
+                        <td class="fill-data text-center" data-field="link"></td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                      <tr><td colspan ="2" class="text-center"><a id="show_more">Ver más registros</a></td></tr>
+                  </tfoot>
               </table>
-				      <div id="alertaCliente" class="text-center text-red"></div>
+			 <div id="alertaCliente" class="text-center text-red"></div>
             </div>
           </div>
         </div>
@@ -55,17 +65,15 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/commun.js"></script>
-    <script type="text/javascript" src="js/filter.js"></script>
-    <script type="text/javascript" src="js/inspections.js"></script>
-    <script type="text/javascript" src="js/vehiculos.js"></script>
-    <script type="text/javascript" src="js/clientes.js"></script>
+    <script type="text/javascript" src="js/sync.js"></script>
+    <script type="text/javascript" src="js/tecnicos.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready", function(){
-          obtenerclients(10,0);
+          obtenerTecnicos(10, 0);
           $("#search").click(function(){
-              $("#table-clients-users").html("");
-              obtenerclients(10, 0, null, $("#word").val());
+              $("#tecnicos tr:not(#clone)").html("");
+              obtenerTecnicos(10, 0, $("#word").val());
           })
       }, false);
      </script>
