--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -168,10 +168,7 @@
                                               <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                                                     <!-- Wrapper for slides -->
                                                     <div class="carousel-inner" role="listbox">
-                                                        <div class="item active"><img style="height:300px; margin:auto" src="img/logo.png"></div>
-                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
-                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
-                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item active hide"><img style="height:300px; margin:auto" src="img/logo.png"></div>
                                                     </div>
 
                                                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -208,7 +205,7 @@
         var url = window.location.href;
         var params = getParams(url);
         sync_data(function(){
-            
+
         })
         inspection.start(params.inspection_id);
         setTimeout(function(){
