--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -168,7 +168,10 @@
                                               <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                                                     <!-- Wrapper for slides -->
                                                     <div class="carousel-inner" role="listbox">
-                                                        <div class="item active hide"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item active"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
+                                                        <div class="item"><img style="height:300px; margin:auto" src="img/logo.png"></div>
                                                     </div>
 
                                                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
