--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -80,7 +80,7 @@
     <script type="text/javascript" src="js/commun.js"></script>
     <script type="text/javascript" src="js/sync.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
-
+    <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready", function(){
